assets/css/styles.css
/* _____Globals */

:root {
  /* Font */
  --font: 'Public Sans', sans-serif;

  /* Primary Colors */
  --primary-color: hsl(233, 26%, 24%);
  --lime-color: hsl(136, 65%, 51%);
  --cyan-color: hsl(192, 70%, 51%);

  /* Neutral Colors */
  --white-color: hsl(0, 0%, 100%);
  --light-gray-color: hsl(0, 0%, 98%);
  --grayish-white-color: hsl(220, 16%, 96%);
  --gray-color: hsl(233, 8%, 62%);
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  font-family: var(--font);
  font-size: 18px;
  color: var(--gray-color);
}

.wrapper {
  padding-left: 20px;
  padding-right: 20px;
  max-width: 1200px;
  margin: 0 auto;
}

.btn-primary {
  width: 180px;
  padding: 14px 8px;
  font-family: var(--font);
  font-size: 16px;
  font-weight: 700;
  color: var(--light-gray-color);

  border: none;
  border-radius: 40px;
  background-image: linear-gradient(
    to right,
    var(--lime-color),
    var(--cyan-color)
  );
}

ul {
  list-style: none;
}

/* _____Header */
.header {
  padding-top: 20px;
  padding-bottom: 20px;
}
.header__container {
  display: flex;
  align-items: center;
  justify-content: space-between;
}
.header__nav ul {
  display: flex;
  align-items: center;
  gap: 20px;
}
.header__link {
  color: var(--gray-color);
  text-decoration: none;
  font-size: 16px;
}

/* _____Footer */
.footer {
  width: 100%;
  background: var(--primary-color);
  padding-top: 50px;
  padding-bottom: 50px;
}

.footer__container {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.footer__main {
  display: flex;
  flex-direction: column;
  gap: 45px;
}

.footer__social {
  padding-top: 5px;
  display: flex;
  align-items: center;
  gap: 10px;
}

.footer__nav {
  width: 45%;
}

.footer__nav ul {
  display: flex;
  gap: 50px;
}

.footer__nav ul div {
  display: flex;
  flex-direction: column;
  gap: 18px;
}

.footer__nav a {
  color: var(--white-color);
  text-decoration: none;
}

.footer__nav a:hover {
  color: var(--lime-color);
}

